Switch maven features to ProcessBuilder