@@ -5,6 +5,11 @@ import fr.epita.assistants.myide.domain.entity.Project;
 import fr.epita.assistants.myide.domain.entity.features.Features;
 import fr.epita.assistants.myide.domain.entity.features.exec_report.ExecReport;
 
+import java.io.File;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
 public abstract class Maven_features extends Features {
     private String name;
 
@@ -24,8 +29,16 @@ public abstract class Maven_features extends Features {
             command.append(object.toString());
         }
         try {
-            final int exitCode =
-                    Runtime.getRuntime().exec(command.toString()).waitFor();
+            ProcessBuilder processBuilder = new ProcessBuilder();
+            ArrayList<String> cmds = new ArrayList<>();
+            cmds.add("mvn");
+            cmds.add(name);
+            for (var str:params) {
+                cmds.add(str.toString());
+            }
+            processBuilder.command(cmds).directory(project.getRootNode().getPath().toFile());
+            Process process = processBuilder.start();
+            int exitCode = process.waitFor();
             if (exitCode == 0)
                 return new ExecReport(ExecReport.Status.SUCCESS);
         } catch (InterruptedException e) {
